--- a/prueba.html
+++ b/prueba.html
@@ -17,7 +17,12 @@
             <div class="row titulo">   
                 <h1>Perfilador - Consultas</h1>
             </div>
-
+            <div class="row">
+                <div class="input-group mb-2 mt-2">
+                    <input type="text" class="form-control" placeholder="Nombre" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+                </div>
+            </div>
             <div class="row">
                 <usuarios></usuarios>
             </div>
@@ -33,7 +38,8 @@
     
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script> -->
+    <script src="./node_modules/vue/dist/vue.min.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
